# llma2-demo

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
app/: __init__.py  api.py  settings.py  utils.py
app/distances/: __init__.py  _base.py  cosine.py
app/embeddings/: __init__.py  _base.py  llama2.py
app/llm/: __init__.py  _base.py  llama2.py
app/models/: __init__.py  _base.py  chat.py  matching.py
scripts/: dev.sh  start.sh
src/: api.py  ollama.py
