[project]
name = "llma2-demo"
version = "0.1.0"
description = ""
authors = [
    { name = "Nguyen Khac Thanh", email = "nguyenkhacthanh244@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "httpx",
    "scipy",
    "sse-starlette",
    "pydantic-settings",
]
